# ultimate-tic-tac-toe

./: LICENSE  README.md
game/: pyproject.toml  pytest.ini
game/tests/: test_tic_tac_toe_board.py
game/ultimate_tic_tac_toe/: main.py  ultimate_tic_tac_toe_errors.py
game/ultimate_tic_tac_toe/board/: __init__.py  tic_tac_toe.py
